<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <android.support.v7.widget.Toolbar
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorPrimary"
        app:title="@string/str_act1_tit_barra"
        app:theme="@style/EstiloBarra"
        android:id="@+id/barra"
        > </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.lerubo.conversordivisas.MainActivity"
        android:background="@drawable/background2"
        tools:layout_editor_absoluteY="81dp"
        tools:layout_editor_absoluteX="0dp"

        >

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="69dp"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="315dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="310dp"
            tools:layout_editor_absoluteY="201dp"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="340dp"
            android:layout_height="43dp"
            android:layout_marginTop="36dp"
            android:gravity="center_horizontal"
            android:text="@string/tvTituloNombre"
            android:textAlignment="gravity"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.636"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etIntro"
            android:layout_width="289dp"
            android:layout_height="75dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:gravity="bottom|end"
            android:hint="@string/tvValorInicial"
            android:inputType="numberDecimal"
            android:maxLength="15"
            android:textAlignment="gravity"
            android:textColor="?attr/colorControlNormal"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.615"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="RtlHardcoded" />

        <ImageButton
            android:id="@+id/btnClear"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/buttondescription"
            android:tint="@android:color/holo_red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintLeft_toRightOf="@+id/etIntro"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.327"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

        <Spinner
            android:id="@+id/spFrom"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:entries="@array/valores"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:ignore="RtlHardcoded" />

        <Spinner
            android:id="@+id/spTo"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:entries="@array/valores"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tvResultado"
            android:layout_width="289dp"
            android:layout_height="75dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="bottom|end"
            android:text="@string/tvValorInicial"
            android:textAlignment="gravity"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/spFrom"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_Error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="tttt"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

        <ImageButton
            android:id="@+id/ib_arrows"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="false"
            android:background="@android:color/transparent"
            android:contentDescription="@string/Arrow"
            android:elevation="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/tvResultado"
            app:layout_constraintEnd_toStartOf="@+id/spTo"
            app:layout_constraintStart_toEndOf="@+id/spFrom"
            app:layout_constraintTop_toBottomOf="@+id/etIntro"
            app:srcCompat="@drawable/blue_arrow" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>

